Fix gap below sidebar on tall screen heights
The previous value of 92vh was always not-quite-correct, but didn't
manifest until we removed the top/bottom position rules to let the
sidebar lay out in its natural static position.

--- a/jekyll/_sass/_sidebar.scss
+++ b/jekyll/_sass/_sidebar.scss
@@ -13,7 +13,7 @@ $sidebar-width: 260px;
 .sidebar {
   background: #F7F7F7;
   font-family: "roboto";
-  height: 92vh;
+  height: calc(100vh - #{$nav-height});
   padding: 30px 24px 60px 15px;
   position: absolute;
   width: $sidebar-width;
